--- a/public/css/wd_composed_style.css
+++ b/public/css/wd_composed_style.css
@@ -5676,9 +5676,9 @@ header {
   right: 10px;
 }
 
-#ListEventModal, #DetailsEventModal, #addEventModal, #SearchListEventModal {
+#ListEventModal, #DetailsEventModal, #addEventModal, #SearchListEventModal, #CustomerInfoModal {
   z-index: 50;
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: auto;
   max-height: 100%;
